--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -125,6 +125,7 @@
                            <h:panelGroup layout="block" styleClass="uk-grid" pt:uk-grid="">
                                <div class="uk-width-1-2@m tam-contenido uk-padding-remove-left">
                                    <div data-video="#{alumnoControlador.tareaActividadModelo.idActividad}" class="scrollFinal"></div>
+                                   <span uk-icon="icon: youtube; ratio: 4" class="visibilidad"/>
                                </div>
                                <div id="scrollTranscript" class="uk-width-1-2@m uk-text-justify transcrip-contenedor tam-contenido scroll-alumno letra-guion borde-guion transcripcion">
                                    <h:outputText value="#{actividadAlumnoControlador.transcripcion}" escape="false"/>
@@ -270,6 +271,7 @@
             tag.src = "https://www.youtube.com/iframe_api";
             var firstScriptTag = document.getElementsByTagName('script')[0];
             firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+            document.querySelector('.transcrip > div:nth-child(2) > div:first-child > span').addEventListener('click',reproducir);
 
             function onYouTubeIframeAPIReady() {
                 videoPlayer.forEach(function (video) {
@@ -295,6 +297,17 @@
             function onPlayerStateChange(event) {
 
                 switch (event.data) {
+                    case 0:{
+                        var contenedorVideo =  document.querySelector('.scrollFinal');
+                        var logo = document.querySelector('.transcrip > div:nth-child(2) > div:first-child > span');
+                        console.log('finalizado');
+                       contenedorVideo.style.display = 'none';
+                       contenedorVideo.parentElement.classList.add('finalVideo');
+                       logo.classList.toggle('visibilidad');
+
+
+                        break;
+                    }
                     case 1:{
                         console.log("reproduciendo");
                         startCount();
@@ -326,6 +339,16 @@
                 timer_is_on = 0;
             }
 
+            function reproducir() {
+                console.log('hola');
+                var contenedorVideo =  document.querySelector('.scrollFinal');
+                var logo = document.querySelector('.transcrip > div:nth-child(2) > div:first-child > span');
+                console.log('finalizado');
+                contenedorVideo.style.display = 'block';
+                contenedorVideo.parentElement.classList.remove('finalVideo');
+                logo.classList.toggle('visibilidad');
+                player[0].playVideo();
+            }
         </script>
         <script type="text/javascript">
             document.querySelectorAll('.estilo-contenedor input[type=hidden]').forEach(function (palabra) {
@@ -420,6 +443,8 @@
     <ui:define name="enlaces-js">
         <h:outputScript library="js" name="/alumno/drag-prueba.js"/>
         <h:outputScript library="js" name="/alumno/match-activity.js"/>
+
     </ui:define>
 </ui:composition>
+
 </html>
