--- a/tecolotl-web/src/main/webapp/alumno/activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activity.xhtml
@@ -123,8 +123,9 @@
                                 <div uk-dropdown="mode: click">#{alumno['activity.help.message.video']}</div>
                             </div>
                            <h:panelGroup layout="block" styleClass="uk-grid" pt:uk-grid="">
-                               <div class="uk-width-1-2@m tam-contenido uk-padding-remove-left">
+                               <div class="uk-width-1-2@m tam-contenido uk-padding-remove-left uk-position-relative">
                                    <div data-video="#{alumnoControlador.tareaActividadModelo.idActividad}" class="scrollFinal"></div>
+                                   <div class="barra-publicidad"></div>
                                    <span uk-icon="icon: youtube; ratio: 4" class="visibilidad"/>
                                </div>
                                <div id="scrollTranscript" class="uk-width-1-2@m uk-text-justify transcrip-contenedor tam-contenido scroll-alumno letra-guion borde-guion transcripcion">
@@ -223,7 +224,7 @@
                                     <div uk-dropdown="mode: click">#{alumno['activity.help.message.fill.in.the.blanks']}</div>
                                 </div>
                                 <div class="video-activity">
-                                   <ui:remove><div data-video="#{alumnoControlador.tareaActividadModelo.idActividad}" class="scrollFinal"></div></ui:remove>
+                                   <ui:remove><div data-video="#{alumnoControlador.tareaActividadModelo.idActividad}" class="scrollFinal" ></div></ui:remove>
                                     <iframe  width="100%" height="100%" src="https://www.youtube.com/embed/#{alumnoControlador.tareaActividadModelo.idActividad}"
                                             frameborder="0" class="scrollFinal"></iframe>
                                 </div>
@@ -300,12 +301,12 @@
                     case 0:{
                         var contenedorVideo =  document.querySelector('.scrollFinal');
                         var logo = document.querySelector('.transcrip > div:nth-child(2) > div:first-child > span');
+                        var barra = document.querySelector('.barra-publicidad');
                         console.log('finalizado');
                        contenedorVideo.style.display = 'none';
                        contenedorVideo.parentElement.classList.add('finalVideo');
                        logo.classList.toggle('visibilidad');
-
-
+                       barra.classList.toggle('visibilidad');
                         break;
                     }
                     case 1:{
@@ -324,7 +325,7 @@
             function pageScroll() {
                 objDiv.scrollTop = objDiv.scrollTop + 5;
                 // time = setTimeout('pageScroll()', 500); tiempo correcto para los videos
-                time = setTimeout('pageScroll()', 800);
+                time = setTimeout('pageScroll()', 400);
             }
 
             function startCount() {
@@ -343,10 +344,12 @@
                 console.log('hola');
                 var contenedorVideo =  document.querySelector('.scrollFinal');
                 var logo = document.querySelector('.transcrip > div:nth-child(2) > div:first-child > span');
+                var barra = document.querySelector('.barra-publicidad');
                 console.log('finalizado');
                 contenedorVideo.style.display = 'block';
                 contenedorVideo.parentElement.classList.remove('finalVideo');
                 logo.classList.toggle('visibilidad');
+                barra.classList.toggle('visibilidad');
                 player[0].playVideo();
             }
         </script>
