--- a/tecolotl-web/src/main/webapp/ingreso.xhtml
+++ b/tecolotl-web/src/main/webapp/ingreso.xhtml
@@ -17,55 +17,25 @@
 <h:body>
     <div class="uk-section">
         <div class="uk-container uk-container-large">
-            <div uk-filter="target: .form-filter">
-                <ul class="login-menu uk-flex uk-flex-center">
-                    <li uk-filter-control=".alumno" class="uk-active"><a href="#">Login</a></li>
-                    <li uk-filter-control=".profesor" style="display: none"><a href="#">#{etiqueta['logging.teacher']}</a></li>
-                </ul>
-                <ul class="form-filter">
-                    <li class="alumno">
-                        <form action="j_security_check" method="post">
-                            <div class="contenedor uk-flex uk-flex-center uk-margin-medium-bottom">
-                                <c:forEach begin="1" end="28" var="indice">
-                                    <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" />
-                                </c:forEach>
-                            </div>
-                            <div class=" uk-flex uk-flex-center">
-                                <span style="color: white">#{etiqueta['logging.nickname']}</span>
-                                <input autocomplete="off" name="j_username" class="uk-input" type="text"/>
-                                <input type="hidden" name="j_password"/>
-                                <input type="submit" value="#{boton['submit']}" onclick="return cargaContrasenia(event)" class="uk-button boton"/>
-                            </div>
-                            <h:outputText value="Usuario o contraseña incorrectos, por favor intenta de nuevo"
-                                          styleClass="uk-margin-small-top"
-                                          rendered="#{not empty param['error']}"/>
-                        </form>
-                    </li>
-                    <li class="profesor" >
-                        <div class="contenedor-profesor uk-flex uk-flex-center">
-                            <h:graphicImage library="img" name="icono/esquadron-contorno.svg" styleClass="logo" pt:uk-svg=""/>
-                            <div class="uk-margin-small-bottom">
-                                <div class="uk-inline">
-                                    <a class="uk-form-icon" uk-icon="icon: user"/>
-                                    <input class="uk-input uk-border-rounded" type="text"
-                                           autocomplete="off"
-                                           placeholder="#{etiqueta['logging.nickname']}"
-                                           name="j_username"/>
-                                </div>
-                            </div>
-                            <div class="uk-margin-small-bottom">
-                                <div class="uk-inline">
-                                    <a class="uk-form-icon" uk-icon="icon: lock"/>
-                                    <input class="uk-input uk-border-rounded" type="password" placeholder="#{etiqueta['password']}" name="j_password"/>
-                                </div>
-                            </div>
-                            <button class="uk-button  uk-border-rounded boton">#{boton['submit']}</button>
-                            <a href="#" class="uk-text-center">#{etiqueta['logging.forgot.password']}</a>
-                            <a href="#" class="uk-text-center">#{etiqueta['logging.not.account']}</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+            <form action="j_security_check" method="post">
+                <div class="contenedor uk-flex uk-flex-center uk-margin-medium-bottom">
+                    <c:forEach begin="1" end="28" var="indice">
+                        <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" />
+                    </c:forEach>
+                </div>
+                <div class=" uk-flex uk-flex-center">
+                    <span style="color: white">#{etiqueta['logging.nickname']}</span>
+                    <input autocomplete="off" class="uk-input" type="text"/>
+                    Galaxia: <input autocomplete="off" class="uk-input"/>
+                    <input type="hidden" name="j_password"/>
+                    <input type="hidden" name="j_username"/>
+                    <input type="submit" value="#{boton['submit']}" onclick="return cargaContrasenia()" class="uk-button boton"/>
+                    <p></p>
+                </div>
+                <h:outputText value="Usuario o contraseña incorrectos, por favor intenta de nuevo"
+                              styleClass="uk-margin-small-top"
+                              rendered="#{not empty param['error']}"/>
+            </form>
         </div>
     </div>
     <script type="application/javascript">
