--- a/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/asignar-actividad.xhtml
@@ -16,7 +16,7 @@
 
                 <ul class="uk-subnav nav-sub uk-visible@m" >
                     <li><h:link outcome="dashboard" value="#{etiqueta['home']}"/></li>
-                    <li><span>Assign Activity</span></li>
+                    <li><span>#{profesor['assign.activity.title']}</span></li>
                 </ul>
 
             <div>
@@ -51,23 +51,23 @@
                 </div>
             </div>
             <div class="uk-margin-large-top uk-flex uk-flex-between uk-flex-wrap">
-                <h1 class="uk-margin-top lescuadron">Assign Activity</h1>
-                <span class="boton-escuadron-base">Temary</span>
+                <h1 class="uk-margin-top lescuadron uk-text-capitalize">#{profesor['assign.activity.title']}</h1>
+                <span class="boton-escuadron-base">#{profesor['button.temary']}</span>
             </div>
             <div class="uk-container" data-uk-filter="target: .js-filter">
                 <div class="uk-width-1-1@m uk-margin-medium-top">
                     <form id="search-form" action="">
                         <div class="uk-inline uk-width-1-1">
                             <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: search"/>
-                            <input class="uk-input uk-width-1-1 search-fld" type="text" placeholder="Type your search" autofocus=""/>
-                            <a href="#" class="search-filter" data-uk-filter-control="[data-tags*='']" hidden="">Search</a>
+                            <input class="uk-input uk-width-1-1 search-fld primera-mayuscula" type="text" placeholder="#{profesor['type.your.search']}" autofocus=""/>
+                            <a href="#" class="search-filter uk-text-capitalize" data-uk-filter-control="[data-tags*='']" hidden="">#{profesor['activity.search ']}</a>
                         </div>
                     </form>
                 </div>
                 <ul class="uk-subnav nav-default-profesor uk-subnav-alumno uk-margin-medium-top">
-                    <li class="uk-active" data-uk-filter-control=""><a href="#">Show All</a></li>
+                    <li class="uk-active" data-uk-filter-control=""><a href="#">#{profesor['show.all']}</a></li>
                     <ui:repeat value="#{asignarActividadControlador.buscaNiveles()}" var="nivel">
-                        <li data-uk-filter-control=".#{nivel}" class="#{nivel}"><a href="#">Level #{nivel}</a></li>
+                        <li data-uk-filter-control=".#{nivel}" class="#{nivel}"><a href="#">#{profesor['activity.level']} #{nivel}</a></li>
                     </ui:repeat>
                 </ul>
                 <div class="uk-margin-medium-top uk-flex uk-flex-right regresa-asigna">
@@ -75,12 +75,12 @@
                         <h:inputHidden id="input-actividad" value="#{asignarActividadControlador.actividad}"/>
                         <h:commandButton id="boton-enviar"
                                          action="#{asignarActividadControlador.asiganarTarea()}"
-                                         value="Asignar" styleClass="uk-button  uk-button-primary"
+                                         value="#{profesor['activity.assign']}" styleClass="uk-button  uk-button-primary"
                                          style="display: none">
                         </h:commandButton>
                     </h:form>
-                    <h:button value="regresar" styleClass="uk-button uk-margin-small-right boton-escuadron-base" outcome="dashboard"/>
-                    <button class="uk-button boton-escuadron-base" onclick="buscaActividadSeleccionada(event)">Asignar</button>
+                    <h:button value="#{boton['back']}" styleClass="uk-button uk-margin-small-right boton-escuadron-base" outcome="dashboard"/>
+                    <button class="uk-button boton-escuadron-base" onclick="buscaActividadSeleccionada(event)">#{profesor['activity.assign']}</button>
                 </div>
                 <ul  class="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" uk-grid="">
                     <ui:repeat value="#{asignarActividadControlador.actividadModeloLista}" var="actividadModelo">
@@ -111,11 +111,11 @@
                                     </div>
                                     <div class="uk-card-footer" data-actividad="#{actividadModelo.idActividad}" data-mapas="#{actividadModelo.mapamental}">
                                         <h:panelGroup layout="block" styleClass=" uk-flex uk-flex-center">
-                                                    <span data-uk-tooltip="title: Grammar"><h:graphicImage  styleClass="uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></span>
-                                                    <span data-uk-tooltip="title:Didactic Guide" uk-icon="icon: file-text"/>
-                                                    <span data-uk-tooltip="title: Cards" uk-icon="icon: commenting"/>
+                                                    <span data-uk-tooltip="title: #{profesor['activity.grammar']}"><h:graphicImage  styleClass="uk-svg" library="img" name="icono/decarga.svg" pt:uk-svg=""/></span>
+                                                    <span data-uk-tooltip="title: #{profesor['didactic.guide']}" uk-icon="icon: file-text"/>
+                                                    <span data-uk-tooltip="title: #{profesor['activity.cards']}" uk-icon="icon: commenting"/>
                                                     <div class="uk-inline">
-                                                        <button data-uk-tooltip="title: Think-Develop and Share" uk-icon="icon: file-edit"/>
+                                                        <button data-uk-tooltip="title: #{profesor['think-develop.and.share']}" uk-icon="icon: file-edit"/>
                                                         <div uk-dropdown="">
                                                             <ul class="uk-nav uk-dropdown-nav">
 
