--- a/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/lista-mapa-mental.xhtml
@@ -32,7 +32,7 @@
             <div class="uk-offcanvas-bar  ">
                 <button class="uk-offcanvas-close" type="button" uk-close=""/>
                 <ul class="uk-nav  nav-sub-offcanvas ">
-                    <li ><h:link outcome="dashboard-maestro" value="Home" styleClass="letra-color-subnav"/></li>
+                    <li ><h:link outcome="dashboard-maestro" value="#{etiqueta['home']}" styleClass="letra-color-subnav"/></li>
                     <li class="uk-text-uppercase "><h:link styleClass="letra-color-subnav" outcome="admin-alumnos" value="Group Details"/></li>
                 </ul>
             </div>
@@ -60,21 +60,21 @@
                                 <p class="uk-text-meta uk-margin-remove-top uk-text-small"><span>#{profesorControlador.profesorModelo.apodo}</span></p>
                             </div>
                             <div class="uk-width-1-1@s">
-                                <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Nickname: </span>#{profesorControlador.profesorModelo.apodo}</p>
-                                <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Email: </span>#{profesorControlador.profesorModelo.correoEletronico}</p>
+                                <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['dashboard.nickname']}: </span>#{profesorControlador.profesorModelo.apodo}</p>
+                                <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['dashboard.email']}: </span>#{profesorControlador.profesorModelo.correoEletronico}</p>
                                 <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small "><span class="uk-text-bold uk-text-primary">Edit Profile: </span></p>
                             </div>
                         </div>
                     </div>
                     <div class="uk-card-body padding-card-body">
-                        <h3 class="uk-text-uppercase uk-text-bold ">grupo</h3>
-                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Grado: </span>#{profesorGrupoControlador.grupoModelo.grado}</p>
-                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">Grupo: </span>#{profesorGrupoControlador.grupoModelo.grupo}</p>
+                        <h3 class="uk-text-uppercase uk-text-bold ">#{profesor['dashboard.group']}</h3>
+                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['dashboard.table.schoolgrade']}: </span>#{profesorGrupoControlador.grupoModelo.grado}</p>
+                        <p class="uk-text-meta uk-margin-remove-bottom uk-margin-remove-top uk-text-small uk-margin-small-bottom "><span class="uk-text-bold">#{profesor['dashboard.group']}: </span>#{profesorGrupoControlador.grupoModelo.grupo}</p>
                     </div>
                 </div>
             </div>
             <div class="boton-regresa uk-width-2-3@m">
-                <h:button styleClass="boton-maestro-base" value="regresar" outcome="tablero"/>
+                <h:button styleClass="boton-maestro-base" value="#{boton['back']}" outcome="tablero"/>
             </div>
         </div>
 
