Resources bundles para no grupos

--- a/tecolotl-web/src/main/webapp/profesor/no-grupo.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/no-grupo.xhtml
@@ -6,15 +6,15 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
-    <title>Este no es su Grupo</title>
+    <title>#{profesor['no.grupo.title']}</title>
 </h:head>
 <h:body>
     <h:outputStylesheet library="css" name="/profesor/no-grupo.css"/>
     <h:outputStylesheet library="css" name="letra.css"/>
-    <p class="lescuadron">Este grupo no ha sido asignado a usted</p>
+    <p class="lescuadron">#{profesor['no.grupo.message']}</p>
     <h:graphicImage library="img" name="/fondo/no-existe.svg" uk-svg=""/>
     <div class="centrado">
-        <button class="btn-atras" onclick="goBack()">Atrás</button>
+        <button class="btn-atras" onclick="goBack()">#{profesor['back']}</button>
     </div>
 
 </h:body>
